Changed backgrund-img of My skills page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           
       </section>
       <section id="my-skills"> 
-         
+         <h1>My Skills</h1> <br>
           <span><i class="fab fa-html5"></i></span>
           <div class="html"></div>
           <span><i class="fab fa-css3"></i></span> <div class="css"></div>
