--- a/index.html
+++ b/index.html
@@ -93,7 +93,26 @@
   </section>
 
 
-     <section id="contact"></section>
+     <section id="contact">
+       <h2>Contact <br> with me</h2>
+<div class="contact-form">
+
+  <form action="">
+    <label for="fname">First Name</label><br>
+    <input type="text" id="fname" name="firstname" placeholder="Your name.." >
+
+    <label for="lname">Last Name</label><br>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name.." >
+    <label for="email">Email adresse</label>
+    <input type="email" name="email" id="email" placeholder="xxxx@server.com">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something to me .." ></textarea>
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+</section>
   </main>
 
 
