--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   </nav> 
   <div class="background-img">
-      <h1>Mahmut Kisecok</h1><br>
+      <h1>Mahmut <br> Kisecok</h1><br>
       <p>Junior Front-end Web Developer</p>
   </div> 
   <main class="container">
