Feat: add icons transform in the hover

--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
 </div>
 </section>
   </main>
+  <footer>
+<div class="footer-left"></div>
+<div class="footer-icons">
+  <ul>
+    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+    <li><a href="#"><i class="fab fa-github-square"></i></a></li>
+    <li><a href="#"><i class="fab fa-codepen"></i></a></li>
+  </ul>
+</div>
+<div class="footer-right"></div>
+  </footer>
 
 
 
