feat: Create animation in my skills

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </div>
   </nav> 
   <div class="background-img">
-      <h1>Mahmut <br> Kisecok</h1><br>
-      <p>Junior Front-end Web Developer</p>
+      <h1 class="slide-in-elliptic-right-bck">Mahmut <br> <span>Kisecok</span> </h1><br>
+      <p class="focus-in-contract-bck">Junior Front-end Web Developer</p>
   </div> 
   <main class="container">
       <section id="about">
@@ -58,8 +58,7 @@
    <img src="./img/project-1.png" alt="project" class="project-img">
    <div class="project-info">
     <h4>Flex-boxes</h4>
-    <div class="linear-color lc-1">
-     </div>
+    <div class="linear-color lc-1"></div>
      <div class="css-punkt"></div> <p>css</p>
      <div class="html-punkt"></div> <p>html</p>
      <a href="https://github.com/mkisecok/box-with-Flex.git" class="button" >See Code</a>
@@ -71,8 +70,8 @@
     <div class="project-info">
       <h4>Warp-club</h4>
     <div class="linear-color lc-2">
-      <div class="css-punkt"></div> <p>css</p>
-      <div class="html-punkt"></div> <p>html</p>
+      <div class="css-punkt"></div><p>css</p>
+      <div class="html-punkt"></div><p>html</p>
       <a href="https://github.com/mkisecok/warp-club.git" class="button" >See Code</a>
       
       </div>
@@ -84,8 +83,8 @@
     <div class="project-info">
       <h4>Grid Design Studio</h4>
       <div class="linear-color lc-3"> </div>
-      <div class="css-punkt"></div> <p>css</p>
-      <div class="html-punkt"></div> <p>html</p>
+      <div class="css-punkt"></div><p>css</p>
+      <div class="html-punkt"></div><p>html</p>
       <a href="https://github.com/mkisecok/uib-layout-grid-design-studio-mkisecok-.git" class="button" >See Code</a>
      </div>
   </div>
