--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <img src="./img/project-2.png" alt="project" class="project-img">
     <div class="project-info">
       <h4>Warp-club</h4>
-    <div class="linear-color lc-2">
+    <div class="linear-color lc-2"></div>
       <div class="css-punkt"></div><p>css</p>
       <div class="html-punkt"></div><p>html</p>
       <a href="https://github.com/mkisecok/warp-club.git" class="button" >See Code</a>
       
-      </div>
+      
      </div>
   </div>
   
