--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </nav> 
   <div class="background-img">
       <h1 class="slide-in-elliptic-right-bck">Mahmut <br> <span>Kisecok</span> </h1><br>
-      <p class="focus-in-contract-bck">Junior Front-end Web Developer</p>
+      <p class="focus-in-contract-bck">Junior Frontend Web Developer</p>
   </div> 
   <main class="container">
       <section id="about">
